<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".TakePictureActivity">

    <TextView
        android:id="@+id/stage_one_instructions_textview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/stage_one"
        android:textSize="18sp" />

    <ImageView
        android:id="@+id/pictureImageview"
        android:layout_width="match_parent"
        android:layout_height="260dp"
        android:layout_below="@id/stage_one_instructions_textview"
        android:src="@drawable/tapme"/>

    <TextView
        android:id="@+id/lookingGoodTextView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/enterTextButton"
        android:layout_below="@id/pictureImageview"
        android:gravity="center"
        android:text="@string/looking_good"
        android:textSize="18sp"
        android:visibility="invisible" />

    <Button
        android:id="@+id/enterTextButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:text="@string/lets_memeify" />

</RelativeLayout>
